--- a/index.html
+++ b/index.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
 <head>
     <title>Excursion</title>
-    <link href="css/style.css" rel="stylesheet" type="text/css">
+    <link href="resources/css/style.css" rel="stylesheet" type="text/css">
     <meta lang="en-us">
 </head>
 <body>
     <header>
-        <h1>Discover hidden places in the world around you</h1>
-        <a>Download Excursion (Coming Soon!)</a>
+        <h1 id="title">Discover hidden places in the world around you</h1>
+        <a href="#title">Download Excursion (Coming Soon!)</a>
     </header>
+    <main>
+        <video src="resources/videos/excursion.mp4" autoplay muted loop></video>
+        <h2>Your personal travel guide</h2>
+        <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+        <figure><img src="resources/images/camp.jpg"></figure>
+        <figure><img src="resources/images/phone.png"></figure>
+        <h2>Coming Soon for iPhone and Android</h2>
+        <a href="#title">Download Excursion (Coming Soon!)</a>
+    </main>
+    <footer>
+        <p>&copy Excursion</p>
+    </footer>
 </body>
 </html>
